manifest/gogs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gogs
spec:
  type: ClusterIP
  selector:
    app: gogs
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
