manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  rules:
  - host: "demo.gogs.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gogs
            port:
              number: 3000
